--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
