--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "jwt-decode": "^4.0.0",
