--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
