created a helper method that converts a `Question` object (from the backend) into `QuestionFormData`

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.7",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
